static-web-deploymnet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-web-service
  namespace: sample
spec:
 # type: NodePort
  ports:
    - port: 80
 #     nodePort: 31000
  selector:
    app: days-app
