static-web-deploymnet/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: days-app-ingress
  namespace: sample
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube-example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-web-service
            port:
              number: 80
